用户信息修改接口，修复日志存储错误问题
